# RetailFlow

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  version.json  vite.config.ts  vite_err.txt
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  check_err.txt  panic_err.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  pagination.rs
src-tauri/src/commands/: backup.rs  customers.rs  inventory.rs  invoices.rs  mod.rs  products.rs  reports.rs  settings.rs  transactions.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/models/: backup.rs  customer.rs  invoice.rs  ledger.rs  mod.rs  payment.rs  product.rs  transaction.rs  user.rs
src-tauri/src/services/: customer_service.rs  inventory_service.rs  mod.rs  payment_service.rs  product_service.rs  report_service.rs  transaction_service.rs
src/components/customers/: CustomerFormModal.tsx  CustomerLedgerModal.tsx
src/components/inventory/: ProductFormModal.tsx  StockAdjustmentModal.tsx
src/components/layout/: Layout.tsx
src/components/pos/: BarcodeInput.tsx  CartTable.tsx  CheckoutPanel.tsx  CustomerSearchModal.tsx  InvoicePreviewModal.tsx  PaymentButtons.tsx  ProductDropdown.tsx  RecentTransactions.tsx  SystemStatus.tsx
src/components/reports/: SimpleBarChart.tsx  (+1 more)
src/lib/: tauri.ts  utils.ts
src/pages/: CustomersPage.tsx  InventoryPage.tsx  POSPage.tsx  ReportsPage.tsx  SettingsPage.tsx  TransactionsPage.tsx
src/store/: cartStore.ts
src/styles/: print.css
src/types/: index.ts
(+1 files in other folders)
